[package]
name = "gimp_palette"
description = "A library for reading and writing the GIMP palette format"
license = "MIT"
version = "0.1.1"
authors = ["Taryn Hill <taryn@phrohdoh.com>"]
repository = "https://github.com/Phrohdoh/gimp-palette-rs"
keywords = ["gimp", "gpl", "palette"]
documentation = "https://docs.rs/gimp_palette/"
readme = "README.md"